# Script-Kitty

./: .gitignore  .helmignore  CONTINUATION_PLAN.md  LICENSE  Makefile  README.md  README_LOCAL_DEV.md  pyproject.toml  script-kitty-local-0.1.0.tgz
data/: README.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: AgentCard.tsx  LogEntry.tsx  MainAppBar.tsx  Widget.tsx
frontend/src/pages/: Agent.tsx  Dashboard.tsx  Logs.tsx  Settings.tsx
frontend/src/services/: api.ts
shared/: __init__.py
shared/proto/: README.md  __init__.py  agent_status.proto  common_types.proto  llm_service.proto  script_kitty_messages.proto
