[tool.poetry]
name = "script-kitty-agi"
version = "0.1.0"
description = "Script Kitty AGI: Modular, multi-agent, production-grade AGI system."
authors = ["Script Kitty Team <team@scriptkitty.ai>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
grpcio = "^1.54.0"
grpcio-tools = "^1.54.0"
protobuf = ">=4.21.0"
opentelemetry-api = "*"
opentelemetry-sdk = "*"
opentelemetry-exporter-jaeger = "*"
prometheus_client = "*"
redis = "*"
psycopg = "*"
PyYAML = "*"
markdown = "*"
ansible = "*"
deprecated = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-asyncio = "*"
black = "*"
flake8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
